[gd_scene load_steps=3 format=3 uid="uid://bvx8ywqm2n5f6"]

[ext_resource type="Script" path="res://scenes/release-manager/pages/export-page/dialogs/export-path-settings-dialog/export-path-settings-dialog.gd" id="1_1a1a1"]
[ext_resource type="Theme" uid="uid://dwoo5bj1luipm" path="res://assets/themes/global-themes/godot-dark-default.tres" id="2_theme"]

[node name="ExportPathSettingsDialog" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_1a1a1")

[node name="BackgroundPanel" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")

[node name="MarginContainer" type="MarginContainer" parent="BackgroundPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleContainer" type="HBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="BackgroundPanel/MarginContainer/VBoxContainer/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Export Path Configuration"

[node name="PlatformLabel" type="Label" parent="BackgroundPanel/MarginContainer/VBoxContainer/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Platform: Windows Desktop"

[node name="RootPathCard" type="PanelContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/RootPathCard"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeaderContainer" type="PanelContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/RootPathCard/VBoxContainer"]
layout_mode = 2

[node name="HeaderMargin" type="MarginContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/RootPathCard/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HeaderRow" type="HBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/RootPathCard/VBoxContainer/HeaderContainer/HeaderMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="BackgroundPanel/MarginContainer/VBoxContainer/RootPathCard/VBoxContainer/HeaderContainer/HeaderMargin/HeaderRow"]
layout_mode = 2
text = "Root Export Folder"
vertical_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="ContentContainer" type="PanelContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/RootPathCard/VBoxContainer"]
layout_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/RootPathCard/VBoxContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="RootPathContainer" type="HBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/RootPathCard/VBoxContainer/ContentContainer/ContentMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RootPathLabel" type="RichTextLabel" parent="BackgroundPanel/MarginContainer/VBoxContainer/RootPathCard/VBoxContainer/ContentContainer/ContentMargin/RootPathContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "C:/exports"
fit_content = true
scroll_active = false

[node name="SelectFolderButton" type="Button" parent="BackgroundPanel/MarginContainer/VBoxContainer/RootPathCard/VBoxContainer/ContentContainer/ContentMargin/RootPathContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 31)
layout_mode = 2
text = "üìÅ"
modulate = Color(1, 1, 0.6, 1)

[node name="ProjectVersionCard" type="PanelContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/ProjectVersionCard"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeaderContainer" type="PanelContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/ProjectVersionCard/VBoxContainer"]
layout_mode = 2

[node name="HeaderMargin" type="MarginContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/ProjectVersionCard/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HeaderRow" type="HBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/ProjectVersionCard/VBoxContainer/HeaderContainer/HeaderMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="BackgroundPanel/MarginContainer/VBoxContainer/ProjectVersionCard/VBoxContainer/HeaderContainer/HeaderMargin/HeaderRow"]
layout_mode = 2
text = "Project Version"
vertical_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="ContentContainer" type="PanelContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/ProjectVersionCard/VBoxContainer"]
layout_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/ProjectVersionCard/VBoxContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ProjectVersionLineEdit" type="LineEdit" parent="BackgroundPanel/MarginContainer/VBoxContainer/ProjectVersionCard/VBoxContainer/ContentContainer/ContentMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "e.g., v1.0.0"

[node name="PathSegmentsCard" type="PanelContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="HeaderContainer" type="PanelContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer"]
layout_mode = 2

[node name="HeaderMargin" type="MarginContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HeaderRow" type="HBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/HeaderContainer/HeaderMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/HeaderContainer/HeaderMargin/HeaderRow"]
layout_mode = 2
text = "Path Segments"
vertical_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="ContentContainer" type="PanelContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentMargin" type="MarginContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ContentVBox" type="VBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/ContentContainer/ContentMargin"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="SegmentsScroll" type="ScrollContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/ContentContainer/ContentMargin/ContentVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ListMargin" type="MarginContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/ContentContainer/ContentMargin/ContentVBox/SegmentsScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 4

[node name="SegmentsList" type="VBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/ContentContainer/ContentMargin/ContentVBox/SegmentsScroll/ListMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="AddButtonsContainer" type="HBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/ContentContainer/ContentMargin/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AddVersionButton" type="Button" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/ContentContainer/ContentMargin/ContentVBox/AddButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+ {version}"

[node name="AddPlatformButton" type="Button" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/ContentContainer/ContentMargin/ContentVBox/AddButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+ {platform}"

[node name="AddDateButton" type="Button" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/ContentContainer/ContentMargin/ContentVBox/AddButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+ {date}"

[node name="AddCustomButton" type="Button" parent="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/ContentContainer/ContentMargin/ContentVBox/AddButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+ Custom Path"

[node name="PreviewCard" type="PanelContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PreviewCard"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeaderContainer" type="PanelContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PreviewCard/VBoxContainer"]
layout_mode = 2

[node name="HeaderMargin" type="MarginContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PreviewCard/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HeaderRow" type="HBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PreviewCard/VBoxContainer/HeaderContainer/HeaderMargin"]
layout_mode = 2

[node name="PreviewTitle" type="Label" parent="BackgroundPanel/MarginContainer/VBoxContainer/PreviewCard/VBoxContainer/HeaderContainer/HeaderMargin/HeaderRow"]
layout_mode = 2
text = "Export Path Preview"
theme_override_font_sizes/font_size = 16

[node name="ContentContainer" type="PanelContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PreviewCard/VBoxContainer"]
layout_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PreviewCard/VBoxContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PreviewLabel" type="RichTextLabel" parent="BackgroundPanel/MarginContainer/VBoxContainer/PreviewCard/VBoxContainer/ContentContainer/ContentMargin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
bbcode_enabled = true
text = "C:/exports/v0.12.2/Windows Desktop"
fit_content = true
scroll_active = false

[node name="ButtonContainer" type="HBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="BackgroundPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 31)
layout_mode = 2
text = "Cancel"

[node name="Spacer" type="Control" parent="BackgroundPanel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="BackgroundPanel/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 31)
layout_mode = 2
text = "Save"

[connection signal="pressed" from="BackgroundPanel/MarginContainer/VBoxContainer/RootPathCard/VBoxContainer/ContentContainer/ContentMargin/RootPathContainer/SelectFolderButton" to="." method="_onSelectFolderPressed"]
[connection signal="pressed" from="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/ContentContainer/ContentMargin/ContentVBox/AddButtonsContainer/AddVersionButton" to="." method="_onAddVersionPressed"]
[connection signal="pressed" from="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/ContentContainer/ContentMargin/ContentVBox/AddButtonsContainer/AddPlatformButton" to="." method="_onAddPlatformPressed"]
[connection signal="pressed" from="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/ContentContainer/ContentMargin/ContentVBox/AddButtonsContainer/AddDateButton" to="." method="_onAddDatePressed"]
[connection signal="pressed" from="BackgroundPanel/MarginContainer/VBoxContainer/PathSegmentsCard/VBoxContainer/ContentContainer/ContentMargin/ContentVBox/AddButtonsContainer/AddCustomButton" to="." method="_onAddCustomPressed"]
[connection signal="pressed" from="BackgroundPanel/MarginContainer/VBoxContainer/ButtonContainer/CancelButton" to="." method="_onCancelPressed"]
[connection signal="pressed" from="BackgroundPanel/MarginContainer/VBoxContainer/ButtonContainer/SaveButton" to="." method="_onSavePressed"]
